// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test View Group Page UI View group page admin renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <div
      className="social-media-title"
    >
      Social Media
    </div>
    <div
      className="profile-picture"
    >
      <div
        className="img"
      />
    </div>
    <div
      className="username"
    >
      Hi, me!
    </div>
  </div>
  <div
    className="top-navbar"
  >
    <div
      className="home-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
      tabIndex={0}
    >
      Home
    </div>
    <div
      className="profile-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
      tabIndex={0}
    >
      Profile
    </div>
  </div>
  <div
    className="main-container"
  >
    <div
      className="side-navbar"
    >
      <button
        className="notifications"
        onClick={[Function]}
        type="submit"
      >
        Notifications
      </button>
      <button
        className="events"
        onClick={[Function]}
        type="submit"
      >
        Analytics
      </button>
      <button
        className="groups"
        onClick={[Function]}
        type="submit"
      >
        Groups
      </button>
      <button
        className="invitations"
        onClick={[Function]}
        type="submit"
      >
        Group Invitations and Requests 
      </button>
      <button
        className="photos"
        onClick={[Function]}
        type="submit"
      >
        Flagged posts
      </button>
    </div>
    <div
      className="main-area"
    >
      <div
        className="info-area"
        id="info-area"
      >
        <div
          className="group-view"
        >
          <div
            className="group-info"
          >
            <ul>
              <li
                id="group-id"
              >
                Group Id: undefined
              </li>
              <li
                id="group-name"
              >
                Group Name: undefined
              </li>
              <li
                id="group-description"
              >
                Group Description: undefined
              </li>
              <li
                id="group-admins"
              >
                Admins: 
              </li>
              <li
                id="is-public"
              >
                Private
              </li>
            </ul>
          </div>
        </div>
        <div
          className="join-group"
          id="join-group-id"
        >
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Leave group"
          />
        </div>
      </div>
       
      <div
        className="view-area"
        id="groups-area"
      >
        <div
          id="revoke"
        >
          <label
            htmlFor="revokeAdmin"
          >
            Revoke Admin: 
            <input
              id="revokeAdmin"
              placeholder="Enter username"
              type="text"
            />
          </label>
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Submit"
          />
        </div>
        <div
          id="add"
        >
          <p>
            Error: potential admin is not a group member
          </p>
          <label
            htmlFor="addAdmin"
          >
            Add Admin: 
            <input
              id="addAdmin"
              placeholder="Enter username"
              type="text"
            />
          </label>
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Submit"
          />
        </div>
        <div
          id="add-non-admin"
        >
          <label
            htmlFor="addNonAdmin"
          >
            Invite a non-Admin member:
            <input
              id="addNonAdmin"
              placeholder="Enter username"
              type="text"
            />
          </label>
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Submit"
          />
        </div>
      </div>
      <div
        className="posts-area"
      >
        <div
          className="text-input"
        >
          Create Post:
          <div
            id="options"
          >
            <label
              className="list"
              htmlFor="textInput"
            >
              <input
                id="textInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Text message
            </label>
            <label
              className="list"
              htmlFor="audioInput"
            >
              <input
                id="audioInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Audio message
            </label>
            <label
              className="list"
              htmlFor="videoInput"
            >
              <input
                id="videoInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Video message
            </label>
            <label
              className="list"
              htmlFor="imageInput"
            >
              <input
                id="imageInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Image message
            </label>
          </div>
          <div
            id="form"
          >
            <textarea
              id="postCaption"
              placeholder="Post message to group"
            />
          </div>
          <button
            className="post-button"
            onClick={[Function]}
            type="submit"
          >
             Post Message 
          </button>
        </div>
        <div
          className="posts"
          id="posts-area"
        />
      </div>
    </div>
    <div
      className="side-navbar"
      id="forMessages"
    >
      <button
        className="messages"
        onClick={[Function]}
        type="submit"
      >
        Messages
      </button>
      <button
        className="logout"
        onClick={[Function]}
        type="submit"
      >
        Log out
      </button>
    </div>
  </div>
</div>
`;

exports[`Test View Group Page UI View group page error renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <div
      className="social-media-title"
    >
      Social Media
    </div>
    <div
      className="profile-picture"
    >
      <div
        className="img"
      />
    </div>
    <div
      className="username"
    >
      Hi, me!
    </div>
  </div>
  <div
    className="top-navbar"
  >
    <div
      className="home-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
      tabIndex={0}
    >
      Home
    </div>
    <div
      className="profile-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
      tabIndex={0}
    >
      Profile
    </div>
  </div>
  <div
    className="main-container"
  >
    <div
      className="side-navbar"
    >
      <button
        className="notifications"
        onClick={[Function]}
        type="submit"
      >
        Notifications
      </button>
      <button
        className="events"
        onClick={[Function]}
        type="submit"
      >
        Analytics
      </button>
      <button
        className="groups"
        onClick={[Function]}
        type="submit"
      >
        Groups
      </button>
      <button
        className="invitations"
        onClick={[Function]}
        type="submit"
      >
        Group Invitations and Requests 
      </button>
      <button
        className="photos"
        onClick={[Function]}
        type="submit"
      >
        Flagged posts
      </button>
    </div>
    <div
      className="main-area"
    >
      <div
        className="info-area"
        id="info-area"
      >
        <div
          className="group-view"
        >
          <div
            className="group-info"
          >
            <ul>
              <li
                id="group-id"
              >
                Group Id: undefined
              </li>
              <li
                id="group-name"
              >
                Group Name: undefined
              </li>
              <li
                id="group-description"
              >
                Group Description: undefined
              </li>
              <li
                id="group-admins"
              >
                Admins: 
              </li>
              <li
                id="is-public"
              >
                Private
              </li>
            </ul>
          </div>
        </div>
        <div
          className="join-group"
          id="join-group-id"
        >
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Leave group"
          />
        </div>
      </div>
       
      <div
        className="view-area"
        id="groups-area"
      >
        <div
          id="revoke"
        >
          <p>
            Error: cannot revoke creator of group
          </p>
          <label
            htmlFor="revokeAdmin"
          >
            Revoke Admin: 
            <input
              id="revokeAdmin"
              placeholder="Enter username"
              type="text"
            />
          </label>
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Submit"
          />
        </div>
        <div
          id="add"
        >
          <label
            htmlFor="addAdmin"
          >
            Add Admin: 
            <input
              id="addAdmin"
              placeholder="Enter username"
              type="text"
            />
          </label>
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Submit"
          />
        </div>
        <div
          id="add-non-admin"
        >
          <label
            htmlFor="addNonAdmin"
          >
            Invite a non-Admin member:
            <input
              id="addNonAdmin"
              placeholder="Enter username"
              type="text"
            />
          </label>
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Submit"
          />
        </div>
      </div>
      <div
        className="posts-area"
      >
        <div
          className="text-input"
        >
          Create Post:
          <div
            id="options"
          >
            <label
              className="list"
              htmlFor="textInput"
            >
              <input
                id="textInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Text message
            </label>
            <label
              className="list"
              htmlFor="audioInput"
            >
              <input
                id="audioInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Audio message
            </label>
            <label
              className="list"
              htmlFor="videoInput"
            >
              <input
                id="videoInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Video message
            </label>
            <label
              className="list"
              htmlFor="imageInput"
            >
              <input
                id="imageInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Image message
            </label>
          </div>
          <div
            id="form"
          >
            <textarea
              id="postCaption"
              placeholder="Post message to group"
            />
          </div>
          <button
            className="post-button"
            onClick={[Function]}
            type="submit"
          >
             Post Message 
          </button>
        </div>
        <div
          className="posts"
          id="posts-area"
        />
      </div>
    </div>
    <div
      className="side-navbar"
      id="forMessages"
    >
      <button
        className="messages"
        onClick={[Function]}
        type="submit"
      >
        Messages
      </button>
      <button
        className="logout"
        onClick={[Function]}
        type="submit"
      >
        Log out
      </button>
    </div>
  </div>
</div>
`;

exports[`Test View Group Page UI View group page post error renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <div
      className="social-media-title"
    >
      Social Media
    </div>
    <div
      className="profile-picture"
    >
      <div
        className="img"
      />
    </div>
    <div
      className="username"
    >
      Hi, me!
    </div>
  </div>
  <div
    className="top-navbar"
  >
    <div
      className="home-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
      tabIndex={0}
    >
      Home
    </div>
    <div
      className="profile-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
      tabIndex={0}
    >
      Profile
    </div>
  </div>
  <div
    className="main-container"
  >
    <div
      className="side-navbar"
    >
      <button
        className="notifications"
        onClick={[Function]}
        type="submit"
      >
        Notifications
      </button>
      <button
        className="events"
        onClick={[Function]}
        type="submit"
      >
        Analytics
      </button>
      <button
        className="groups"
        onClick={[Function]}
        type="submit"
      >
        Groups
      </button>
      <button
        className="invitations"
        onClick={[Function]}
        type="submit"
      >
        Group Invitations and Requests 
      </button>
      <button
        className="photos"
        onClick={[Function]}
        type="submit"
      >
        Flagged posts
      </button>
    </div>
    <div
      className="main-area"
    >
      <div
        className="info-area"
        id="info-area"
      >
        <div
          className="group-view"
        >
          <div
            className="group-info"
          >
            <ul>
              <li
                id="group-id"
              >
                Group Id: undefined
              </li>
              <li
                id="group-name"
              >
                Group Name: undefined
              </li>
              <li
                id="group-description"
              >
                Group Description: undefined
              </li>
              <li
                id="group-admins"
              >
                Admins: 
              </li>
              <li
                id="is-public"
              >
                Private
              </li>
            </ul>
          </div>
        </div>
        <div
          className="join-group"
          id="join-group-id"
        >
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Leave group"
          />
        </div>
      </div>
       
      <div
        className="view-area"
        id="groups-area"
      >
        <div
          id="revoke"
        >
          <label
            htmlFor="revokeAdmin"
          >
            Revoke Admin: 
            <input
              id="revokeAdmin"
              placeholder="Enter username"
              type="text"
            />
          </label>
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Submit"
          />
        </div>
        <div
          id="add"
        >
          <label
            htmlFor="addAdmin"
          >
            Add Admin: 
            <input
              id="addAdmin"
              placeholder="Enter username"
              type="text"
            />
          </label>
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Submit"
          />
        </div>
        <div
          id="add-non-admin"
        >
          <label
            htmlFor="addNonAdmin"
          >
            Invite a non-Admin member:
            <input
              id="addNonAdmin"
              placeholder="Enter username"
              type="text"
            />
          </label>
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Submit"
          />
        </div>
      </div>
      <div
        className="posts-area"
      >
        <div
          className="text-input"
        >
          Create Post:
          <p>
            Error: post is too large
          </p>
          <div
            id="options"
          >
            <label
              className="list"
              htmlFor="textInput"
            >
              <input
                id="textInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Text message
            </label>
            <label
              className="list"
              htmlFor="audioInput"
            >
              <input
                id="audioInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Audio message
            </label>
            <label
              className="list"
              htmlFor="videoInput"
            >
              <input
                id="videoInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Video message
            </label>
            <label
              className="list"
              htmlFor="imageInput"
            >
              <input
                id="imageInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Image message
            </label>
          </div>
          <div
            id="form"
          >
            <textarea
              id="postCaption"
              placeholder="Post message to group"
            />
          </div>
          <button
            className="post-button"
            onClick={[Function]}
            type="submit"
          >
             Post Message 
          </button>
        </div>
        <div
          className="posts"
          id="posts-area"
        />
      </div>
    </div>
    <div
      className="side-navbar"
      id="forMessages"
    >
      <button
        className="messages"
        onClick={[Function]}
        type="submit"
      >
        Messages
      </button>
      <button
        className="logout"
        onClick={[Function]}
        type="submit"
      >
        Log out
      </button>
    </div>
  </div>
</div>
`;

exports[`Test View Group Page UI View group page renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <div
      className="social-media-title"
    >
      Social Media
    </div>
    <div
      className="profile-picture"
    >
      <div
        className="img"
      />
    </div>
    <div
      className="username"
    >
      Hi, me!
    </div>
  </div>
  <div
    className="top-navbar"
  >
    <div
      className="home-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
      tabIndex={0}
    >
      Home
    </div>
    <div
      className="profile-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
      tabIndex={0}
    >
      Profile
    </div>
  </div>
  <div
    className="main-container"
  >
    <div
      className="side-navbar"
    >
      <button
        className="notifications"
        onClick={[Function]}
        type="submit"
      >
        Notifications
      </button>
      <button
        className="events"
        onClick={[Function]}
        type="submit"
      >
        Analytics
      </button>
      <button
        className="groups"
        onClick={[Function]}
        type="submit"
      >
        Groups
      </button>
      <button
        className="invitations"
        onClick={[Function]}
        type="submit"
      >
        Group Invitations and Requests 
      </button>
      <button
        className="photos"
        onClick={[Function]}
        type="submit"
      >
        Flagged posts
      </button>
    </div>
    <div
      className="main-area"
    >
      <div
        className="info-area"
        id="info-area"
      >
        <div
          className="group-view"
        >
          <div
            className="group-info"
          >
            <ul>
              <li
                id="group-id"
              >
                Group Id: undefined
              </li>
              <li
                id="group-name"
              >
                Group Name: undefined
              </li>
              <li
                id="group-description"
              >
                Group Description: undefined
              </li>
              <li
                id="group-admins"
              >
                Admins: 
              </li>
              <li
                id="is-public"
              >
                Private
              </li>
            </ul>
          </div>
        </div>
        <div
          className="join-group"
          id="join-group-id"
        >
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Leave group"
          />
        </div>
      </div>
       
      <div
        className="view-area"
        id="groups-area"
      >
        <div
          id="revoke"
        >
          <label
            htmlFor="revokeAdmin"
          >
            Revoke Admin: 
            <input
              id="revokeAdmin"
              placeholder="Enter username"
              type="text"
            />
          </label>
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Submit"
          />
        </div>
        <div
          id="add"
        >
          <label
            htmlFor="addAdmin"
          >
            Add Admin: 
            <input
              id="addAdmin"
              placeholder="Enter username"
              type="text"
            />
          </label>
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Submit"
          />
        </div>
        <div
          id="add-non-admin"
        >
          <label
            htmlFor="addNonAdmin"
          >
            Invite a non-Admin member:
            <input
              id="addNonAdmin"
              placeholder="Enter username"
              type="text"
            />
          </label>
          <input
            id="submit"
            onClick={[Function]}
            type="button"
            value="Submit"
          />
        </div>
      </div>
      <div
        className="posts-area"
      >
        <div
          className="text-input"
        >
          Create Post:
          <div
            id="options"
          >
            <label
              className="list"
              htmlFor="textInput"
            >
              <input
                id="textInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Text message
            </label>
            <label
              className="list"
              htmlFor="audioInput"
            >
              <input
                id="audioInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Audio message
            </label>
            <label
              className="list"
              htmlFor="videoInput"
            >
              <input
                id="videoInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Video message
            </label>
            <label
              className="list"
              htmlFor="imageInput"
            >
              <input
                id="imageInput"
                name="msgType"
                onClick={[Function]}
                type="radio"
              />
              Image message
            </label>
          </div>
          <div
            id="form"
          >
            <textarea
              id="postCaption"
              placeholder="Post message to group"
            />
          </div>
          <button
            className="post-button"
            onClick={[Function]}
            type="submit"
          >
             Post Message 
          </button>
        </div>
        <div
          className="posts"
          id="posts-area"
        />
      </div>
    </div>
    <div
      className="side-navbar"
      id="forMessages"
    >
      <button
        className="messages"
        onClick={[Function]}
        type="submit"
      >
        Messages
      </button>
      <button
        className="logout"
        onClick={[Function]}
        type="submit"
      >
        Log out
      </button>
    </div>
  </div>
</div>
`;
